# airplanedev.cli

./: .editorconfig  .gitattributes  .gitignore  .golangci.yml  .goreleaser.yml  .pre-commit-config.yaml  .prettierignore  Dockerfile  Makefile  README.md  codecov.yml  go.mod  go.sum  package-lock.json  package.json  renovate.json  renovate.json5
.github/: CONTRIBUTING.md  pull_request_template.md
.github/workflows/: codeql-analysis.yml  codeql.yml  dependency-review.yml  golang.yml  javascript.yml  python.yml  release.yml  sourcegraph.yml  split_tests.py  (+2 more)
pkg/definitions/updaters/python/: .pylintrc  Makefile  pyproject.toml  updater.pex
pkg/definitions/updaters/python/fixtures/: all_cleared_airplane.py  all_cleared_out_airplane.py  all_out_airplane.py  can_update_airplane.py  decorators_airplane.py  decorators_out_airplane.py  explicit_slug_airplane.py  explicit_slug_out_airplane.py  imports_airplane.py  imports_out_airplane.py  invalid_code_airplane.py  invalid_code_out_airplane.py  modern_syntax_airplane.py  modern_syntax_out_airplane.py  multiple_tasks_airplane.py  multiple_tasks_out_airplane.py  parameters_airplane.py  parameters_out_airplane.py  py310_out_airplane.py  py39_out_airplane.py  resource_aliases_out_airplane.py  spaces_airplane.py  spaces_out_airplane.py  strings_out_airplane.py  tabs_airplane.py  tabs_out_airplane.py  unicode_airplane.py  unicode_out_airplane.py
pkg/definitions/updaters/python/src/: exceptions.py  location.py  main.py  parse.py  serialize.py  update.py  utils.py
scripts/: check_versions.py  copy_cache_images.py  install.sh
(+1121 files in other folders)
